samples/_failures_safe/1761041930_eaef6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_323ff552.c: In function ‘main’:
./samples/SAFE/__tmp_323ff552.c:130:9: error: expected declaration or statement at end of input
  130 |         printf("Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_323ff552.c:130:9: error: expected declaration or statement at end of input
